scripts/resources/raw/yaml/argocd/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: service-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /argocd/
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`*`) && PathPrefix(`/argocd`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          namespace: argocd
---
